--- a/index.html
+++ b/index.html
@@ -4,117 +4,119 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>JNF Consultancy - Login</title>
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <title>JSN Consultancy</title>
     <link rel="stylesheet" href="assets/css/style.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <!-- navbar start -->
     <header class="header">
       <span class="header__logo">JNF Consultancy</span>
+      <i class="bx bx-menu header__toggle" id="header-toggle"></i>
 
       <nav class="nav" id="nav-menu">
         <div class="nav__content">
           <div class="bd-grid">
             <div class="nav__perfil">
-              <span class="login__nav_name">JNF Consultancy</span>
+              <span class="nav__name">JNF Consultancy</span>
             </div>
+
+            <div class="nav__menu">
+              <ul class="nav__list">
+                <li class="nav__item">
+                  <a href="#" class="nav__link active">Personal Statement</a>
+                </li>
+
+                <li class="nav__item">
+                  <a href="#" class="nav__link">Cover Letter</a>
+                </li>
+
+                <li class="nav__item">
+                  <a href="#" class="nav__link">CV</a>
+                </li>
+
+                <li class="nav__item dropdown">
+                  <a href="#" class="nav__link dropdown__link"
+                    >Subjects <i class="bx bx-chevron-down dropdown__icon"></i
+                  ></a>
+
+                  <ul class="dropdown__menu">
+                    <li class="dropdown__item">
+                      <a href="#" class="nav__link">Subject 1</a>
+                    </li>
+                    <li class="dropdown__item">
+                      <a href="#" class="nav__link">Subject 2</a>
+                    </li>
+                    <li class="dropdown__item">
+                      <a href="#" class="nav__link">Subject 3</a>
+                    </li>
+                    <li class="dropdown__item">
+                      <a href="#" class="nav__link">Subject 4</a>
+                    </li>
+                    <li class="dropdown__item">
+                      <a href="#" class="nav__link">Subject 5</a>
+                    </li>
+                  </ul>
+                </li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="nav__menu-left">
+            <ul class="nav__list">
+              <li class="nav__item">
+                <a href="#" class="nav__link nav-user">User ID- AB21B2</a>
+              </li>
+              <li class="nav__item">
+                <a href="#" class="nav__link nav-logout">
+                  <i class="bx bx-log-out-circle"></i> Logout
+                </a>
+              </li>
+            </ul>
           </div>
         </div>
       </nav>
     </header>
+    <div class="header__menu-wrapper-overlay" id="body-overlay"></div>
     <!-- navbar end -->
-    <div class="jnf-container">
-      <div class="jnf-inner">
-        <div class="jnf-two-pane">
-          <div class="right-pane"></div>
-          <div class="left-pane">
-            <div class="jnf-form">
-              <div>
-                <h4>Login into account</h4>
-              </div>
-              <form>
-                <div class="form-group">
-                  <div class="input-group">
-                    <div class="input-group-prepend">
-                      <span class="input-group-text">
-                        <svg
-                          xmlns="http://www.w3.org/2000/svg"
-                          width="24"
-                          height="16"
-                          viewbox="0 0 24 16"
-                        >
-                          <g transform="translate(0)">
-                            <path
-                              d="M23.983,101.792a1.3,1.3,0,0,0-1.229-1.347h0l-21.525.032a1.169,1.169,0,0,0-.869.4,1.41,1.41,0,0,0-.359.954L.017,115.1a1.408,1.408,0,0,0,.361.953,1.169,1.169,0,0,0,.868.394h0l21.525-.032A1.3,1.3,0,0,0,24,115.062Zm-2.58,0L12,108.967,2.58,101.824Zm-5.427,8.525,5.577,4.745-19.124.029,5.611-4.774a.719.719,0,0,0,.109-.946.579.579,0,0,0-.862-.12L1.245,114.4,1.23,102.44l10.422,7.9a.57.57,0,0,0,.7,0l10.4-7.934.016,11.986-6.04-5.139a.579.579,0,0,0-.862.12A.719.719,0,0,0,15.977,110.321Z"
-                              transform="translate(0 -100.445)"
-                            ></path>
-                          </g>
-                        </svg>
-                      </span>
-                    </div>
 
-                    <input
-                      required=""
-                      class="form-control"
-                      name="email"
-                      type="email"
-                      placeholder="Email Address"
-                    />
-                  </div>
-                </div>
-
-                <div class="form-group">
-                  <div class="input-group">
-                    <div class="input-group-prepend">
-                      <span class="input-group-text">
-                        <svg
-                          xmlns="http://www.w3.org/2000/svg"
-                          width="16"
-                          height="24"
-                          viewbox="0 0 16 24"
-                        >
-                          <g transform="translate(0)">
-                            <g transform="translate(5.457 12.224)">
-                              <path
-                                d="M207.734,276.673a2.543,2.543,0,0,0-1.749,4.389v2.3a1.749,1.749,0,1,0,3.5,0v-2.3a2.543,2.543,0,0,0-1.749-4.389Zm.9,3.5a1.212,1.212,0,0,0-.382.877v2.31a.518.518,0,1,1-1.035,0v-2.31a1.212,1.212,0,0,0-.382-.877,1.3,1.3,0,0,1-.412-.955,1.311,1.311,0,1,1,2.622,0A1.3,1.3,0,0,1,208.633,280.17Z"
-                                transform="translate(-205.191 -276.673)"
-                              ></path>
-                            </g>
-                            <path
-                              d="M84.521,9.838H82.933V5.253a4.841,4.841,0,1,0-9.646,0V9.838H71.7a1.666,1.666,0,0,0-1.589,1.73v10.7A1.666,1.666,0,0,0,71.7,24H84.521a1.666,1.666,0,0,0,1.589-1.73v-10.7A1.666,1.666,0,0,0,84.521,9.838ZM74.346,5.253a3.778,3.778,0,1,1,7.528,0V9.838H74.346ZM85.051,22.27h0a.555.555,0,0,1-.53.577H71.7a.555.555,0,0,1-.53-.577v-10.7a.555.555,0,0,1,.53-.577H84.521a.555.555,0,0,1,.53.577Z"
-                              transform="translate(-70.11)"
-                            ></path>
-                          </g>
-                        </svg>
-                      </span>
-                    </div>
-
-                    <input
-                      required=""
-                      class="form-control"
-                      name="password"
-                      type="password"
-                      placeholder="Password"
-                    />
-                  </div>
-                </div>
-
-                <div class="form-group">
-                  <div class="input-group custom-checkbox">
-                    <input type="checkbox" class="custom__checkbox-field" />
-                    <label>Remember me </label>
-                  </div>
-                </div>
-
-                <div>
-                  <button class="btn btn-primary btn-block">Login</button>
-                </div>
-              </form>
-            </div>
+    <!-- content start -->
+    <section class="content">
+      <div class="content_wrapper">
+        <div class="content__left">
+          <div>
+            <p>
+              Nursing is a profession within the healthcare sector focused on
+              the care of individuals, families, and communities so they may
+              attain, maintain, or recover optimal health and quality of life.
+              Nurses may be disserentiated from other health care providers by
+              their approach to patient care, training, and scope of practice.
+              Nurses practise in many specialities with differiing levels of
+              prescription authority. Nurses comprise the largest component of
+              most healthcare environment; but there is evedince of
+              international shortages of qualified nurses. many nurses provide
+              care within the ordering scope of physicians, and this traditional
+              role has shaped the public image of nurses and many of the
+              traditional regulations and providers roles and changning.
+            </p>
           </div>
         </div>
+        <div class="content__right">
+          <textarea
+            placeholder="start typing here"
+            cols="30"
+            rows="10"
+          ></textarea>
+
+          <button>clear</button>
+        </div>
       </div>
-    </div>
+    </section>
+    <!-- content end -->
+
+    <script src="assets/js/main.js"></script>
   </body>
 </html>
